...
                            <constraint firstAttribute="trailing" secondItem="WoR-hv-5Dl" secondAttribute="trailing" id="eLr-VK-zco"/>
                            <constraint firstAttribute="trailing" secondItem="8QE-V7-wDh" secondAttribute="trailing" id="hTB-AO-SPU"/>
                            <constraint firstItem="8QE-V7-wDh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="oGR-Hh-jOY"/>
                            <constraint firstItem="iGD-hN-qZY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pvc-hR-mPy"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="News" id="4Gl-nr-5Ac"/>
                    <connections>
                        <outlet property="activityIndicatorView" destination="iGD-hN-qZY" id="Dj3-3p-U3l"/>
                        <outlet property="collection" destination="WoR-hv-5Dl" id="BFE-Sk-a9v"/>
                        <outlet property="searchBar" destination="8QE-V7-wDh" id="cf5-aC-QBC"/>
                    </connections>
                </viewController>
...
